[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "distopf"
version = "0.1.2"
authors = [
  {  name="Nathan Gray", email="nathantgray@gmail.com" },
  {  name="Abodh Poudyal"},
  {  name="Rabayet Sadnan"},
]
description = "A package for solving unbalanced three-phase distribution system optimal power flow problems."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cvxpy>=1.4.1",
    "networkx",
    "numpy",
    "pandas",
    "scipy",
    "plotly",
    "opendssdirect.py==0.8.4"
]
[tool.hatch.build.targets.wheel]
packages = ["distopf"]

[project.urls]
Homepage = "https://github.com/nathantgray/distopf"
Issues = "https://github.com/nathantgray/distopf/issues"